tests/paczka1/fuzzy1/91892596.err
Error in line 2: b6hUj0OSsj A499 45,0
Error in line 4: VZBanss A499 6,0
Error in line 30: 2cWPqimhIGI A499 437,6
Error in line 36: YRi16S A499 51,3
Error in line 37: YRi16S S992 86,9
